:bug: properly fixed double border bug

--- a/reveal/theme-zenika/theme.css
+++ b/reveal/theme-zenika/theme.css
@@ -45,7 +45,7 @@ body {
 }
 
 .reveal .slides section section {
-  margin-left: -70px;
+  margin-left: calc(-1 * var(--main-content-horizontal-padding));
 }
 
 .reveal.overview .slides section {
